# skill-manager

./: PRODUCT_SPEC.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_search_index.sql  003_market_invocations.sql  004_invocation_routes.sql  005_canonical_store.sql
src-tauri/src/: app_meta.rs  installer.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs  tools.rs
src-tauri/src/commands/: canonical.rs  invocations.rs  metadata.rs  mod.rs  repositories.rs  settings.rs  skills.rs  workspaces.rs
src-tauri/src/core/: adapter_registry.rs  audit.rs  install.rs  manifest.rs  materializer.rs  mod.rs  policy.rs  store.rs
src-tauri/src/db/: canonical.rs  categories.rs  invocations.rs  market.rs  metadata.rs  mod.rs  repositories.rs  workspaces.rs
src-tauri/src/utils/: skill_parser.rs
src/components/: icons.tsx
src/components/CategoryTree/: CategoryTree.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/NoteEditor/: NoteEditor.tsx
src/components/Onboarding/: OnboardingScreen.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/SkillCard/: SkillCard.tsx
src/components/SkillDetailPanel/: SkillDetailPanel.tsx
src/components/SkillsToolbar/: SkillsToolbar.tsx
src/components/TagEditor/: TagEditor.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/WorkspaceCard/: WorkspaceCard.tsx
src/components/WorkspaceForm/: WorkspaceForm.tsx
src/components/ui/: badge.tsx  button.tsx  confirm-dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tooltip.tsx
src/hooks/: useUpdater.ts  useVirtualGrid.ts
src/hooks/__tests__/: useVirtualGrid.test.ts
src/lib/: api.test.ts  api.ts  appMeta.ts  filterSkills.test.ts  filterSkills.ts  mapSkill.test.ts  mapSkill.ts
src/stores/: categoryStore.ts  invocationStore.ts  marketStore.ts  repoStore.ts  skillStore.ts  targetStore.ts  workspaceStore.ts
src/styles/: globals.css
(+7 files in other folders)
