[package]
name = "skillmanager"
version = "0.1.0"
description = "SkillManager - AI Skills Management Desktop App"
authors = ["Lee-zg"]
edition = "2021"

[lib]
name = "skillmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                   = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener     = "2"
tauri-plugin-sql        = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart  = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater    = "2"
tauri-plugin-process    = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
rusqlite       = { version = "0.31", features = ["bundled"] }
walkdir        = "2"
anyhow         = "1"
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["v4"] }
dirs-next      = "2"
serde_yaml     = "0.9"
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding    = "2"
